foundation-objs/main/default/objects/QuoteLineItem/fields/Type_of_Compliance_service__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Compliance_service__c</fullName>
    <label>Type of Compliance service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GSTR-1</fullName>
            </value>
            <value>
                <fullName>Recon of Inward Register v/s GSTR-2A/GSTR-2B</fullName>
            </value>
            <value>
                <fullName>GSTR-3B</fullName>
            </value>
            <value>
                <fullName>GSTR-6</fullName>
            </value>
            <value>
                <fullName>GSTR ITC-04</fullName>
            </value>
            <value>
                <fullName>GSTR-7</fullName>
            </value>
            <value>
                <fullName>GSTR-8</fullName>
            </value>
            <value>
                <fullName>Return filing summary</fullName>
            </value>
            <value>
                <fullName>GSTIN Verification Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>