foundation-objs/main/default/objects/QuoteLineItem/fields/Type_of_integration_category__c.field-meta.xml
<CustomField>
    <fullName>Type_of_integration_category__c</fullName>
    <label>Type of integration category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_integration_category</valueSetName>
    </valueSet>
</CustomField>