foundation-objs/main/default/objects/QuoteLineItem/fields/Usage_Log__c.field-meta.xml
<CustomField>
    <fullName>Usage_Log__c</fullName>
    <label>Usage Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>