foundation-objs/main/default/objects/QuoteLineItem/fields/Usage_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Usage_Parameters__c</fullName>
    <label>Usage Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>