foundation-objs/main/default/objects/QuoteLineItem/validationRules/CTX_Platform_Is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CTX_Platform_Is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; 
AND(
TEXT(Product2.Product_Line__c) = &apos;GST&apos;,
ISBLANK(TEXT(Platform__c))
)</errorConditionFormula>
    <errorMessage>For GST Product Kindly Select Platform</errorMessage>
</ValidationRule>