foundation-objs/main/default/objects/QuoteLineItem/validationRules/Mandatory_GCC_Integ.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_GCC_Integ</fullName>
    <active>false</active>
    <errorConditionFormula>Product2.OrderForm_Product_Name__c = &apos;Clear E-invoice API Integration&apos; &amp;&amp; ISBLANK(TEXT( GCC_Einv_Integration__c ))</errorConditionFormula>
    <errorMessage>Please specify GCC Einv Integration.</errorMessage>
</ValidationRule>